Updating my login files

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=Ktaofeek015@gmail.com
 EMAIL_PASS=bqjnlykzedombwve
-EMAIL_FROM=RescureNEAR <Ktaofeek015@gmail.com>
+EMAIL_FROM=RescureNEAR "This Message was send from RescureNEAR if you did not request for this message kindly ignore this message!"
